<resources>
    <string name="app_name">InventoryApp</string>
    <string name="db_message">The database contains this many books:</string>
    <string name="insert_dummy_data">Insert dummy data</string>
    <string name="delete_all_entries">Delete all Books</string>

    <!-- Title text for the empty view, which describes the empty bookshelf image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">What? No books?</string>

    <!-- Subtitle text for the empty view that prompts the user to add a book [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Time to fill that bookshelf!</string>

    <string name="enter_book_title">Please enter a book title</string>

    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="Pound_sterling_symbol">£</string>
    <string name="editor_activity_title_new_book">Add a new book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="add_quantity_button_toast">Add a book</string>
    <string name="add_a_book">Please add a book</string>
    <string name="less_than_0">Value can\'t be less than 0</string>
    <string name="call_supplier">Call Supplier</string>
    <string name="supplier_name">Supplier name</string>
    <string name="supplier_phone_number">Supplier phone number</string>

    <string name="desc_increase_amount">increase amount</string>

    <string name="desc_decrease_amount">decrease amount</string>
    <string name="text_quantity">Quantity</string>
    <string name="textview_book_title">Book Title</string>
    <string name="textview_price">Price £</string>
    <string name="insert_book_failed">Insert book failed</string>
    <string name="insert_book_successful">Insert book successful</string>
    <string name="editor_update_book_failed">Update book failed</string>
    <string name="editor_update_book_successful">Update book successful</string>
    <string name="unsaved_changes_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="delete_book_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_deletebook_failed">Book deletion failed</string>
    <string name="editor_deletebook_successful">Book deletion successful</string>

    <string name="hint_book_name">Harry Potter</string>
    <string name="hint_book_price">10</string>
    <string name="hint_quantity">12</string>
    <string name="hint_supplier_name">Gardners Books</string>
    <string name="hint_phone_number">020 245875541</string>
    <string name="main_tools_title">Book Title</string>
    <string name="main_tools_price">Price</string>
    <string name="main_tools_instock">In stock: 1</string>
    <string name="desc_empty_bookshelf">empty bookshelf</string>
    <string name="title_empty">Please enter a book title</string>
    <string name="price_empty">Please enter a book price</string>
    <string name="quantity_empty">Please enter a book quantity</string>
    <string name="supplier_name_empty">Please enter a supplier name</string>
    <string name="supplier_phone_empty">Please enter a supplier phone number</string>

</resources>
