<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/med_dimen"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_book_title"
            style="@style/ActivityEditor"
            android:text="@string/textview_book_title" />

        <EditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditText"
            android:hint="@string/hint_book_name"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_price"
            style="@style/ActivityEditor"
            android:text="@string/textview_price" />

        <EditText
            android:id="@+id/edit_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditText"
            android:hint="@string/hint_book_price"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_quantity"
            style="@style/ActivityEditor"
            android:text="@string/text_quantity" />

        <Button
            android:id="@+id/button_decrease"
            android:layout_width="@dimen/edit_quantity_buttons"
            android:layout_height="@dimen/edit_quantity_buttons"
            android:layout_gravity="center"
            android:background="@drawable/ic_remove"
            android:contentDescription="@string/desc_decrease_amount" />

        <EditText
            android:id="@+id/edit_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/EditText"
            android:hint="@string/hint_quantity"
            android:inputType="number" />

        <Button
            android:id="@+id/button_increase"
            android:layout_width="@dimen/edit_quantity_buttons"
            android:layout_height="@dimen/edit_quantity_buttons"
            android:layout_gravity="center"
            android:background="@drawable/add"
            android:contentDescription="@string/desc_increase_amount" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_supplier"
            style="@style/ActivityEditor"
            android:text="@string/supplier_name" />

        <EditText
            android:id="@+id/edit_supplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditText"
            android:hint="@string/hint_supplier_name"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_supplier_phone"
            style="@style/ActivityEditor"
            android:text="@string/supplier_phone_number" />

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/EditText"
            android:layout_weight="2"
            android:hint="@string/hint_phone_number"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_dimen"
        android:layout_marginTop="@dimen/small_dimen"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="@dimen/small_dimen">

        <Button
            android:id="@+id/button_call"
            style="@style/CallButton"
            android:text="@string/call_supplier" />

    </LinearLayout>

</LinearLayout>