<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of books -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/book_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/mainTextView"
            tools:text="@string/main_tools_title" />

        <TextView
            android:id="@+id/book_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/mainTextViewSub"
            tools:text="@string/main_tools_price" />

        <TextView
            android:id="@+id/stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/mainTextViewSub"
            tools:text="@string/main_tools_instock" />
    </LinearLayout>

    <Button
        android:id="@+id/sale"
        android:layout_width="@dimen/sale_icon"
        android:layout_height="@dimen/sale_icon"
        android:background="@drawable/ic_bag"
        android:focusable="false"
        android:focusableInTouchMode="false" />
</LinearLayout>